# algorithm-wm

./: README.md  algorithm-wm.cabal
lib/: Prelude.hs
src/: AST.hs  Eval.hs  Loc.hs  Main.hs  Module.hs  Name.hs  NewParser.hs  Parser.hs  Program.hs  REPL.hs  Renamer.hs  TC.hs  TyError.hs  Unify.hs
test/: parser.hs  poly.hs  ty-error.hs
